--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="Your api" />
+            android:value="AIzaSyBYrz07M1PPribwaRrfnLcOgo3vijq5KqU" />
 
     </application>
 
